--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* line 17, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -19,38 +19,38 @@ time, mark, audio, video {
   font-size: 100%;
   vertical-align: baseline; }
 
-/* line 22, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1; }
 
-/* line 24, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none; }
 
-/* line 26, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-/* line 28, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle; }
 
-/* line 30, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none; }
-  /* line 103, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+  /* line 103, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
   q:before, q:after, blockquote:before, blockquote:after {
     content: "";
     content: none; }
 
-/* line 32, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none; }
 
-/* line 116, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block; }
 
@@ -137,7 +137,7 @@ section {
   z-index: 3; }
 
 /* line 74, sass/_base.sass */
-.fixed {
+.fixed, .chapter-1 header {
   position: fixed;
   left: 0;
   top: 0; }
@@ -190,7 +190,7 @@ section {
     width: 25%; } }
 
 /* line 31, sass/_grid.sass */
-.container, .contents, header.big nav {
+.container, .contents, header.big nav, .chapter-1 header nav {
   margin: 0 auto;
   max-width: 1000px;
   padding: 24px 10px; }
@@ -225,15 +225,15 @@ header {
     header li a {
       text-decoration: none; }
   /* line 30, sass/_header.sass */
-  header.small, .chapter-1 header {
+  header.small {
     background: rgba(0, 0, 0, 0.75);
     height: 60px;
     overflow: hidden;
     padding: 0.5em 0;
     z-index: 99; }
     /* line 37, sass/_header.sass */
-    header.small p, .chapter-1 header p {
-      background: url('../img/pbs-light_background.svg?1369273560') no-repeat left top;
+    header.small p {
+      background: url('../img/pbs-light_background.svg?1369272538') no-repeat left top;
       background-size: contain;
       float: left;
       margin-right: 1em;
@@ -241,19 +241,19 @@ header {
       height: 35px;
       text-indent: -10000px; }
     /* line 46, sass/_header.sass */
-    header.small hr, .chapter-1 header hr {
+    header.small hr {
       display: none; }
     /* line 49, sass/_header.sass */
-    header.small h1, .chapter-1 header h1 {
+    header.small h1 {
       color: #aaaaaa;
       font-size: 12.8px; }
       /* line 53, sass/_header.sass */
-      header.small h1 em, .chapter-1 header h1 em {
+      header.small h1 em {
         font-family: "BodoniW01-PosterItalic", serif;
         font-size: 16px;
         font-style: normal; }
       /* line 58, sass/_header.sass */
-      header.small h1 small, .chapter-1 header h1 small {
+      header.small h1 small {
         color: #aaaaaa;
         font-family: "Adobe Caslon W01 Bd It", serif;
         font-size: 14.4px;
@@ -261,69 +261,75 @@ header {
         padding: 0 2.4px;
         text-transform: lowercase; }
     /* line 66, sass/_header.sass */
-    header.small nav, .chapter-1 header nav {
+    header.small nav {
       font-family: Helvetica, sans-serif;
       font-size: 12px;
       margin-left: -0.5em; }
       /* line 71, sass/_header.sass */
-      header.small nav li, .chapter-1 header nav li {
+      header.small nav li {
         margin: 0 0.1em; }
         /* line 74, sass/_header.sass */
-        header.small nav li a, .chapter-1 header nav li a {
+        header.small nav li a {
           color: #aaaaaa;
           padding: 0 0.3em; }
         /* line 78, sass/_header.sass */
-        header.small nav li a:hover, .chapter-1 header nav li a:hover {
+        header.small nav li a:hover {
           color: #666666; }
   /* line 81, sass/_header.sass */
-  header.big {
+  header.big, .chapter-1 header {
     margin: 2em auto;
     text-align: center; }
     /* line 85, sass/_header.sass */
-    header.big p,
+    header.big p, .chapter-1 header p,
     header.big hr,
+    .chapter-1 header hr,
     header.big h1 span,
-    header.big h1 em {
+    .chapter-1 header h1 span,
+    header.big h1 em,
+    .chapter-1 header h1 em {
       position: relative; }
     /* line 91, sass/_header.sass */
-    header.big hr {
+    header.big hr, .chapter-1 header hr {
       z-index: 1; }
     /* line 94, sass/_header.sass */
-    header.big h1 em {
+    header.big h1 em, .chapter-1 header h1 em {
       z-index: 2; }
     /* line 97, sass/_header.sass */
-    header.big p,
+    header.big p, .chapter-1 header p,
     header.big h1 span,
+    .chapter-1 header h1 span,
     header.big h1 small,
-    header.big nav {
+    .chapter-1 header h1 small,
+    header.big nav,
+    .chapter-1 header nav {
       z-index: 3; }
     /* line 103, sass/_header.sass */
-    header.big p {
+    header.big p, .chapter-1 header p {
       margin: 0 0 30px; }
       /* line 106, sass/_header.sass */
-      header.big p:before, header.big p:after {
+      header.big p:before, .chapter-1 header p:before, header.big p:after, .chapter-1 header p:after {
         color: #548e85;
         content: "★";
         font-size: 9.6px;
         padding: 0 6px;
         vertical-align: 4.8px; }
     /* line 114, sass/_header.sass */
-    header.big hr {
+    header.big hr, .chapter-1 header hr {
       display: none; }
     /* line 117, sass/_header.sass */
-    header.big h1 {
+    header.big h1, .chapter-1 header h1 {
       font-size: 57.6px;
       margin: -0.25em 0 6px;
       word-spacing: -12px; }
       /* line 122, sass/_header.sass */
-      header.big h1 em {
+      header.big h1 em, .chapter-1 header h1 em {
         font-family: "BodoniW01-PosterItalic", serif;
         font-size: 104px;
         font-style: normal;
         margin: 0;
         padding: 0 3px; }
       /* line 129, sass/_header.sass */
-      header.big h1 small {
+      header.big h1 small, .chapter-1 header h1 small {
         color: #548e85;
         font-family: "Adobe Caslon W01 Bd It", serif;
         font-size: 36.8px;
@@ -332,7 +338,7 @@ header {
         text-transform: lowercase;
         vertical-align: 8px; }
     /* line 138, sass/_header.sass */
-    header.big nav {
+    header.big nav, .chapter-1 header nav {
       overflow: hidden;
       *zoom: 1;
       border-top: 1px solid #888888;
@@ -340,39 +346,58 @@ header {
       line-height: 1;
       padding: 12px 0 9.6px; }
       /* line 146, sass/_header.sass */
-      header.big nav li {
+      header.big nav li, .chapter-1 header nav li {
         letter-spacing: -1px;
         margin: 0 0.9em; }
     /* line 151, sass/_header.sass */
-    header.big.bordered hr {
+    header.big.bordered hr, .chapter-1 header.bordered hr {
       display: block; }
     /* line 154, sass/_header.sass */
-    header.big.bordered h1 {
+    header.big.bordered h1, .chapter-1 header.bordered h1 {
       margin-top: -43.2px; }
       /* line 157, sass/_header.sass */
-      header.big.bordered h1 em {
+      header.big.bordered h1 em, .chapter-1 header.bordered h1 em {
         background: white; }
     /* line 160, sass/_header.sass */
-    header.big.on_top_of_dark_background {
+    header.big.on_top_of_dark_background, .chapter-1 header {
       text-shadow: #383838 0 0 25px; }
       /* line 163, sass/_header.sass */
-      header.big.on_top_of_dark_background h1 {
+      header.big.on_top_of_dark_background h1, .chapter-1 header h1 {
         color: white; }
         /* line 166, sass/_header.sass */
-        header.big.on_top_of_dark_background h1 small {
+        header.big.on_top_of_dark_background h1 small, .chapter-1 header h1 small {
           color: white; }
       /* line 170, sass/_header.sass */
-      header.big.on_top_of_dark_background nav a {
+      header.big.on_top_of_dark_background nav a, .chapter-1 header nav a {
         color: white; }
 
-/* line 19, sass/_chapter1.sass */
+/* line 1, sass/_footer.sass */
+footer {
+  background: #383838; }
+  /* line 4, sass/_footer.sass */
+  footer a {
+    color: white; }
+
+/* line 2, sass/_chapter1.sass */
+.chapter-1 header {
+  z-index: 2; }
+  /* line 8, sass/_chapter1.sass */
+  .chapter-1 header p {
+    text-shadow: none; }
+  /* line 11, sass/_chapter1.sass */
+  .chapter-1 header h1 {
+    margin-top: 4em; }
+  /* line 14, sass/_chapter1.sass */
+  .chapter-1 header nav {
+    display: none; }
+/* line 17, sass/_chapter1.sass */
 .chapter-1 .company_photo {
   z-index: 1;
   -webkit-transition: opacity 0.3s;
   -moz-transition: opacity 0.3s;
   -o-transition: opacity 0.3s;
   transition: opacity 0.3s; }
-/* line 23, sass/_chapter1.sass */
+/* line 21, sass/_chapter1.sass */
 .chapter-1 .intro {
   margin-top: 80%;
   z-index: 3; }
