--- a/css/sass/_header.sass
+++ b/css/sass/_header.sass
@@ -1,8 +1,10 @@
 header.site_header
+  @extend .fixed
+  @include transition(all .3s)
   padding: 0
   text-transform: uppercase
   width: 100%
-  @include transition(all .3s)
+  z-index: 4
 
   .contents
     padding: 0
@@ -29,15 +31,15 @@ header.site_header
         text-decoration: none
 
   &.small
-    background: rgba(0, 0, 0, .75)
+    background: rgba(0, 0, 0, .8)
     height: 60px
     overflow: hidden
-    margin-top: -60px
-    padding: .5em 0
-    z-index: 99
+    top: -60px
+    padding: .7em 0 .5em 0
+    opacity: 1 !important
 
     &.shown
-      margin-top: 0
+      top: 0
 
     p
       background: image-url('pbs-light_background.svg') no-repeat left top
