--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* line 17, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -19,38 +19,38 @@ time, mark, audio, video {
   font-size: 100%;
   vertical-align: baseline; }
 
-/* line 22, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1; }
 
-/* line 24, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none; }
 
-/* line 26, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-/* line 28, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle; }
 
-/* line 30, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none; }
-  /* line 103, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+  /* line 103, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
   q:before, q:after, blockquote:before, blockquote:after {
     content: "";
     content: none; }
 
-/* line 32, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none; }
 
-/* line 116, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block; }
 
@@ -137,7 +137,7 @@ section {
   z-index: 3; }
 
 /* line 74, sass/_base.sass */
-.fixed, .chapter-1-rethinking-retirement header.site_header.big {
+.fixed, header.site_header {
   position: fixed;
   left: 0;
   top: 0; }
@@ -197,70 +197,71 @@ section {
 
 /* line 1, sass/_header.sass */
 header.site_header {
-  padding: 0;
-  text-transform: uppercase;
-  width: 100%;
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   -o-transition: all 0.3s;
-  transition: all 0.3s; }
-  /* line 7, sass/_header.sass */
+  transition: all 0.3s;
+  padding: 0;
+  text-transform: uppercase;
+  width: 100%;
+  z-index: 4; }
+  /* line 9, sass/_header.sass */
   header.site_header .contents {
     padding: 0; }
-    /* line 10, sass/_header.sass */
+    /* line 12, sass/_header.sass */
     header.site_header .contents p {
       margin: 0; }
-    /* line 13, sass/_header.sass */
+    /* line 15, sass/_header.sass */
     header.site_header .contents h1 {
       font-family: "Bodoni W01 Poster";
       font-weight: normal;
       line-height: 1;
       margin: 0; }
-    /* line 19, sass/_header.sass */
+    /* line 21, sass/_header.sass */
     header.site_header .contents li {
       float: left; }
-      /* line 22, sass/_header.sass */
+      /* line 24, sass/_header.sass */
       header.site_header .contents li:first-child {
         margin-left: 0; }
-      /* line 25, sass/_header.sass */
+      /* line 27, sass/_header.sass */
       header.site_header .contents li:last-child {
         margin-right: 0; }
-      /* line 28, sass/_header.sass */
+      /* line 30, sass/_header.sass */
       header.site_header .contents li a {
         text-decoration: none; }
-  /* line 31, sass/_header.sass */
+  /* line 33, sass/_header.sass */
   header.site_header.small {
-    background: rgba(0, 0, 0, 0.75);
+    background: rgba(0, 0, 0, 0.8);
     height: 60px;
     overflow: hidden;
-    margin-top: -60px;
-    padding: 0.5em 0;
-    z-index: 99; }
-    /* line 39, sass/_header.sass */
+    top: -60px;
+    padding: 0.7em 0 0.5em 0;
+    opacity: 1 !important; }
+    /* line 41, sass/_header.sass */
     header.site_header.small.shown {
-      margin-top: 0; }
-    /* line 42, sass/_header.sass */
+      top: 0; }
+    /* line 44, sass/_header.sass */
     header.site_header.small p {
-      background: url('../img/pbs-light_background.svg?1369273560') no-repeat left top;
+      background: url('../img/pbs-light_background.svg?1369272538') no-repeat left top;
       background-size: contain;
       float: left;
       margin-right: 1em;
       width: 35px;
       height: 35px;
       text-indent: -10000px; }
-    /* line 51, sass/_header.sass */
+    /* line 53, sass/_header.sass */
     header.site_header.small hr {
       display: none; }
-    /* line 54, sass/_header.sass */
+    /* line 56, sass/_header.sass */
     header.site_header.small h1 {
       color: #aaaaaa;
       font-size: 12.8px; }
-      /* line 58, sass/_header.sass */
+      /* line 60, sass/_header.sass */
       header.site_header.small h1 em {
         font-family: "BodoniW01-PosterItalic", serif;
         font-size: 16px;
         font-style: normal; }
-      /* line 63, sass/_header.sass */
+      /* line 65, sass/_header.sass */
       header.site_header.small h1 small {
         color: #aaaaaa;
         font-family: "Adobe Caslon W01 Bd It", serif;
@@ -268,69 +269,69 @@ header.site_header {
         font-style: normal;
         padding: 0 2.4px;
         text-transform: lowercase; }
-    /* line 71, sass/_header.sass */
+    /* line 73, sass/_header.sass */
     header.site_header.small nav {
       font-family: Helvetica, sans-serif;
       font-size: 12px;
       margin-left: -0.5em; }
-      /* line 76, sass/_header.sass */
+      /* line 78, sass/_header.sass */
       header.site_header.small nav li {
         margin: 0 0.1em; }
-        /* line 79, sass/_header.sass */
+        /* line 81, sass/_header.sass */
         header.site_header.small nav li a {
           color: #aaaaaa;
           padding: 0 0.3em; }
-        /* line 83, sass/_header.sass */
+        /* line 85, sass/_header.sass */
         header.site_header.small nav li a:hover {
           color: #666666; }
-  /* line 86, sass/_header.sass */
+  /* line 88, sass/_header.sass */
   header.site_header.big {
     margin: 2em auto;
     text-align: center; }
-    /* line 90, sass/_header.sass */
+    /* line 92, sass/_header.sass */
     header.site_header.big p,
     header.site_header.big hr,
     header.site_header.big h1 span,
     header.site_header.big h1 em {
       position: relative; }
-    /* line 96, sass/_header.sass */
+    /* line 98, sass/_header.sass */
     header.site_header.big hr {
       z-index: 1; }
-    /* line 99, sass/_header.sass */
+    /* line 101, sass/_header.sass */
     header.site_header.big h1 em {
       z-index: 2; }
-    /* line 102, sass/_header.sass */
+    /* line 104, sass/_header.sass */
     header.site_header.big p,
     header.site_header.big h1 span,
     header.site_header.big h1 small,
     header.site_header.big nav {
       z-index: 3; }
-    /* line 108, sass/_header.sass */
+    /* line 110, sass/_header.sass */
     header.site_header.big p {
       margin: 0 0 30px; }
-      /* line 111, sass/_header.sass */
+      /* line 113, sass/_header.sass */
       header.site_header.big p:before, header.site_header.big p:after {
         color: #548e85;
         content: "★";
         font-size: 9.6px;
         padding: 0 6px;
         vertical-align: 4.8px; }
-    /* line 119, sass/_header.sass */
+    /* line 121, sass/_header.sass */
     header.site_header.big hr {
       display: none; }
-    /* line 122, sass/_header.sass */
+    /* line 124, sass/_header.sass */
     header.site_header.big h1 {
       font-size: 57.6px;
       margin: -0.25em 0 6px;
       word-spacing: -12px; }
-      /* line 127, sass/_header.sass */
+      /* line 129, sass/_header.sass */
       header.site_header.big h1 em {
         font-family: "BodoniW01-PosterItalic", serif;
         font-size: 104px;
         font-style: normal;
         margin: 0;
         padding: 0 3px; }
-      /* line 134, sass/_header.sass */
+      /* line 136, sass/_header.sass */
       header.site_header.big h1 small {
         color: #548e85;
         font-family: "Adobe Caslon W01 Bd It", serif;
@@ -339,7 +340,7 @@ header.site_header {
         padding: 0 2.4px;
         text-transform: lowercase;
         vertical-align: 8px; }
-    /* line 143, sass/_header.sass */
+    /* line 145, sass/_header.sass */
     header.site_header.big nav {
       overflow: hidden;
       *zoom: 1;
@@ -347,29 +348,29 @@ header.site_header {
       border-bottom: 1px solid #888888;
       line-height: 1;
       padding: 12px 0 9.6px; }
-      /* line 151, sass/_header.sass */
+      /* line 153, sass/_header.sass */
       header.site_header.big nav li {
         letter-spacing: -1px;
         margin: 0 0.9em; }
-    /* line 156, sass/_header.sass */
+    /* line 158, sass/_header.sass */
     header.site_header.big.bordered hr {
       display: block; }
-    /* line 159, sass/_header.sass */
+    /* line 161, sass/_header.sass */
     header.site_header.big.bordered h1 {
       margin-top: -43.2px; }
-      /* line 162, sass/_header.sass */
+      /* line 164, sass/_header.sass */
       header.site_header.big.bordered h1 em {
         background: white; }
-    /* line 165, sass/_header.sass */
+    /* line 167, sass/_header.sass */
     header.site_header.big.on_top_of_dark_background, .chapter-1-rethinking-retirement header.site_header.big {
       text-shadow: #383838 0 0 25px; }
-      /* line 168, sass/_header.sass */
+      /* line 170, sass/_header.sass */
       header.site_header.big.on_top_of_dark_background h1, .chapter-1-rethinking-retirement header.site_header.big h1 {
         color: white; }
-        /* line 171, sass/_header.sass */
+        /* line 173, sass/_header.sass */
         header.site_header.big.on_top_of_dark_background h1 small, .chapter-1-rethinking-retirement header.site_header.big h1 small {
           color: white; }
-      /* line 175, sass/_header.sass */
+      /* line 177, sass/_header.sass */
       header.site_header.big.on_top_of_dark_background nav a, .chapter-1-rethinking-retirement header.site_header.big nav a {
         color: white; }
 
@@ -427,23 +428,22 @@ footer {
 /* line 3, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement header.site_header.big {
   z-index: 2; }
-  /* line 8, sass/_chapter1.sass */
+  /* line 7, sass/_chapter1.sass */
   .chapter-1-rethinking-retirement header.site_header.big p {
     text-shadow: none; }
-  /* line 11, sass/_chapter1.sass */
+  /* line 10, sass/_chapter1.sass */
   .chapter-1-rethinking-retirement header.site_header.big h1 {
     margin-top: 4em; }
-  /* line 14, sass/_chapter1.sass */
+  /* line 13, sass/_chapter1.sass */
   .chapter-1-rethinking-retirement header.site_header.big nav {
     display: none; }
-/* line 17, sass/_chapter1.sass */
+/* line 16, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement .company_photo {
   z-index: 1;
   -webkit-transition: opacity 0.3s;
   -moz-transition: opacity 0.3s;
   -o-transition: opacity 0.3s;
   transition: opacity 0.3s; }
-/* line 21, sass/_chapter1.sass */
+/* line 20, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement .intro {
-  margin-top: 80%;
-  z-index: 3; }
+  margin-top: 80%; }
