--- a/css/sass/_header.sass
+++ b/css/sass/_header.sass
@@ -1,6 +1,6 @@
 header.site_header
   @extend .fixed
-  @include transition(all .3s)
+  @include transition(opacity .3s, margin-top .3s)
   padding: 0
   text-transform: uppercase
   width: 100%
@@ -34,12 +34,12 @@ header.site_header
     background: rgba(0, 0, 0, .8)
     height: 60px
     overflow: hidden
-    top: -60px
+    margin-top: -1000px
     padding: .7em 0 .5em 0
     opacity: 1 !important
 
     &.shown
-      top: 0
+      margin-top: 0
 
     p
       background: image-url('pbs-light_background.svg') no-repeat left top
