--- a/css/style.css
+++ b/css/style.css
@@ -197,10 +197,10 @@ section {
 
 /* line 1, sass/_header.sass */
 header.site_header {
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
+  -webkit-transition: opacity 0.3s, margin-top 0.3s;
+  -moz-transition: opacity 0.3s, margin-top 0.3s;
+  -o-transition: opacity 0.3s, margin-top 0.3s;
+  transition: opacity 0.3s, margin-top 0.3s;
   padding: 0;
   text-transform: uppercase;
   width: 100%;
@@ -234,12 +234,12 @@ header.site_header {
     background: rgba(0, 0, 0, 0.8);
     height: 60px;
     overflow: hidden;
-    top: -60px;
+    margin-top: -1000px;
     padding: 0.7em 0 0.5em 0;
     opacity: 1 !important; }
     /* line 41, sass/_header.sass */
     header.site_header.small.shown {
-      top: 0; }
+      margin-top: 0; }
     /* line 44, sass/_header.sass */
     header.site_header.small p {
       background: url('../img/pbs-light_background.svg?1369272538') no-repeat left top;
